<resources>
    <string name="app_name">S4DPAFragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_principal">Principal</string>
    <string name="title_registro">Registro</string>
    <string name="title_musica">Música</string>
    <string name="title_fragment_principal">Fragmentos en Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valetfullname">Enter full name</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtnunspecified">Others</string>
    <string name="valchklicense">Driver license</string>
    <string name="valchkcar">Have car?</string>
    <string name="valbtnsave">SAVE</string>

    <string-array name="country_array">
        <item>Brasil</item>
        <item>Argentina</item>
        <item>Uruguay</item>
        <item>Ecuador</item>
        <item>Perú</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Venezuela</item>
    </string-array>
</resources>